vlib/v/checker/tests/comptime_field_name_assign_incorrect_type_err.vv
module main

struct Record {
mut:
	f1 int
}

fn map_data[T](data map[string]string) T {
	mut t := T{}
	$for field in T.fields {
		t.$(field.name) = data[field.name]
	}
	return t
}

fn main() {
	mut data := map[string]string{}
	data['f1'] = '123'
	t := map_data[Record](data)
	println('bug1 : ${t}')
}
